This commit resolves two issues in the `update-tld-list.yml` GitHub Actions workflow.
1.  **Fix Permission Error:** The workflow was failing with a 403 error because the default `GITHUB_TOKEN` lacks write permissions to the repository. This is fixed by explicitly granting `permissions: contents: write` to the job, allowing it to push the updated file.

2.  **Optimize Workflow:** The `setup-node` step has been removed as it was unnecessary. The workflow only relies on `make`, `curl`, and `git`, which are already available in the `ubuntu-latest` runner environment. This makes the workflow faster and cleaner.

3. **Refactor:** Move isIpAddress to utils index for better organization.

--- a/.github/workflows/update-tld-list.yml
+++ b/.github/workflows/update-tld-list.yml
@@ -11,14 +11,11 @@ on:
 jobs:
   update-list:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # Grant write permission to the GITHUB_TOKEN for this job
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Node.js (for make)
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18' # Or your preferred Node.js version
 
       - name: Download latest public_suffix_list.dat
         run: make all
