--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     }
   },
   "scripts": {
-    "build": "rm -rf dist && rollup -c",
+    "build": "rm -rf dist && cross-env NODE_ENV=production rollup -c",
     "test": "jest --verbose",
     "test:coverage": "jest --coverage",
     "prepublishOnly": "npm run build"
@@ -37,15 +37,17 @@
   },
   "homepage": "https://github.com/hoosin/domain-extract#readme",
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.0.0",
-    "rollup-plugin-string": "^3.0.0",
+    "@types/jest": "^29.5.0",
+    "cross-env": "^10.1.0",
+    "jest": "^29.5.0",
     "rollup": "^3.0.0",
     "rollup-plugin-dts": "^5.0.0",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.0",
-    "jest": "^29.5.0",
+    "rollup-plugin-string": "^3.0.0",
     "ts-jest": "^29.0.5",
-    "@types/jest": "^29.5.0"
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.0"
   },
   "files": [
     "dist"
