feat(build): Automate GitHub Pages deployment and local asset loading
This commit streamlines the process of deploying the browser example to GitHub Pages and ensures it uses local assets.

- **Introduced `doc/index.html`**: A dedicated HTML file for the GitHub Pages live demo, configured to load the library and TLD list from local paths within the `docs` directory.
- **Updated `build` script**: The `npm run build` command now automatically:
    - Cleans and creates the `docs` directory.
    - Compiles the library.
    - Copies the minified UMD build (`domain-extract.min.js`) to `docs/`.
    - Copies the `public_suffix_list.dat` to `docs/`.
    - Copies the `doc/index.html` to `docs/index.html`.
- **Modified `docs/index.html` to use local assets**: The example page now fetches `domain-extract.min.js` and `public_suffix_list.dat` from the same `docs` directory, making it self-contained for GitHub Pages hosting.

This change enables a fully automated and self-sufficient live demo on GitHub Pages, improving accessibility and ease of use for showcasing the library.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     }
   },
   "scripts": {
-    "build": "rm -rf dist && cross-env NODE_ENV=production rollup -c",
+    "build": "rm -rf dist docs && mkdir docs && cross-env NODE_ENV=production rollup -c && cp examples/browser/index.html docs/",
     "test": "jest --verbose",
     "test:coverage": "jest --coverage",
     "prepublishOnly": "npm run build"
