ci: 🎡 Rename package to 'tld-parse' and update related referenc

--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "domain-extract-example",
+  "name": "tld-parse-example",
   "private": true,
   "version": "0.0.0",
   "type": "module",
