feat: introduce 'core' entrypoint and update docs
This commit introduces a new `core` entry point (`tld-parse/core`) to provide a lightweight version of the library without the bundled Public Suffix List. This gives users more control over the bundle size and data loading strategy.

### Changes:

-   **Code Refactoring**:
    -   Created `src/core.ts` with the data-agnostic parsing logic.
    -   The `core` version now throws a runtime error if `tldParse.register()` has not been called, ensuring fail-fast behavior.
    -   The standard entry point (`src/index.ts`) now imports from `core` and injects the bundled suffix list, preserving the original behavior.

-   **Build System**:
    -   Updated `rollup.config.cjs` to build both standard and `core` versions for ESM, CJS, and UMD formats.
    -   Configured separate TypeScript declaration file generation for each entry point.

-   **Package Manifest**:
    -   Added the `./core` path to the `exports` map in `package.json` for proper module resolution.

-   **Documentation**:
    -   Updated `README.md` to document the new `core` entry point with usage examples.
    -   Clarified that `tldParse.register()` is optional for the standard version (for updates) but mandatory for the `core` version.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
       "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.js",
       "types": "./dist/types/index.d.ts"
+    },
+    "./core": {
+      "import": "./dist/esm/core.js",
+      "require": "./dist/cjs/core.js",
+      "types": "./dist/types/core.d.ts"
     }
   },
   "scripts": {
